--- a/Lesson1/Lesson1/Base.lproj/Main.storyboard
+++ b/Lesson1/Lesson1/Base.lproj/Main.storyboard
@@ -108,7 +108,7 @@
                                     <constraint firstAttribute="width" constant="64" id="EQp-wp-S5Z"/>
                                     <constraint firstAttribute="height" constant="64" id="Wrh-HG-eN0"/>
                                 </constraints>
-                                <state key="normal" image="Combined Shape"/>
+                                <state key="normal" image="Plus0.png"/>
                                 <connections>
                                     <action selector="createNewTaskActionButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="sS9-GM-Isq"/>
                                 </connections>
@@ -236,6 +236,7 @@
         <image name="Combined Shape" width="24" height="24"/>
         <image name="Lists" width="72" height="72"/>
         <image name="More" width="24" height="24"/>
+        <image name="Plus0.png" width="24" height="24"/>
         <image name="Shape" width="60" height="60"/>
         <image name="Task" width="72" height="72"/>
     </resources>
