--- a/Lesson1/Lesson1/CellTask/TableViewCell.xib
+++ b/Lesson1/Lesson1/CellTask/TableViewCell.xib
@@ -14,7 +14,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="tableViewCell" rowHeight="60" id="KGk-i7-Jjw" customClass="TableViewCell" customModule="Lesson1" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="tableViewCell" id="KGk-i7-Jjw" customClass="TableViewCell" customModule="Lesson1" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -29,7 +29,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="43S-Gj-2ru">
-                        <rect key="frame" x="60" y="19" width="0.0" height="22"/>
+                        <rect key="frame" x="60" y="19" width="271" height="22"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="22" id="WH9-av-J7g"/>
                         </constraints>
@@ -55,14 +55,15 @@
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="JPh-hc-9D8" secondAttribute="trailing" constant="16" id="9x2-sG-1yQ"/>
                     <constraint firstItem="Gnd-Pg-BRc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="60" id="Oek-18-mdA"/>
-                    <constraint firstItem="Gnd-Pg-BRc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="59" id="OiA-XL-8Sj"/>
                     <constraint firstItem="HJR-nG-1qO" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="QeY-EA-RiS"/>
+                    <constraint firstAttribute="trailing" secondItem="43S-Gj-2ru" secondAttribute="trailing" constant="44" id="SoH-qC-l17"/>
                     <constraint firstItem="43S-Gj-2ru" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="19" id="VaM-XC-SjL"/>
                     <constraint firstItem="43S-Gj-2ru" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Y2C-ZU-A2A"/>
                     <constraint firstItem="43S-Gj-2ru" firstAttribute="leading" secondItem="HJR-nG-1qO" secondAttribute="trailing" constant="16" id="YCV-WY-dR4"/>
                     <constraint firstItem="JPh-hc-9D8" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="ZzC-Ui-vU9"/>
                     <constraint firstAttribute="trailing" secondItem="Gnd-Pg-BRc" secondAttribute="trailing" id="kxk-Tn-6jX"/>
                     <constraint firstItem="HJR-nG-1qO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="ltv-Bg-YdN"/>
+                    <constraint firstAttribute="bottom" secondItem="Gnd-Pg-BRc" secondAttribute="bottom" id="tGI-jQ-X1K"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
